# opencv

./: .gitignore  a.out
cpp/project - opencv - Face_Detection/: CMakeLists.txt  test.cpp
cpp/project-opencv-color_spaces/: CMakeLists.txt  test.cpp
cpp/project-opencv-image_annotation/: CMakeLists.txt  test.cpp
cpp/project-opencv-image_manipulation/: CMakeLists.txt  test.cpp
cpp/project-opencv-video/: .test.py.swp  CMakeLists.txt  test.cpp
new-project-opencv/: CMakeLists.txt  test.py
new-video-project-opencv/: CMakeLists.txt  test.py
project-opencv/: CMakeLists.txt  test.cpp
python/project-opencv-color_spaces/: test.py
python/project-opencv-image_annotation/: test.py
python/project-opencv-image_manipulation/: test.py
python/project-opencv-video/: test.py
video-project-opencv/: CMakeLists.txt  test.cpp
